complete user operations except profileImage
