# routes/userRoutes.js
@@ -5,14 +5,48 @@ const { USER_PERMISSIONS } = require('../utils/Enums');
 
 const router = express.Router();
 
-router.post('/loginSignup', authController.loginSignup);
-
+router.post('/EmailLoginSignup', authController.EmailLoginSignup);
+router.post('/MobileLoginSignup', authController.MobileLoginSignup);
 router.post('/checkOtpCode', authController.checkOtpCode);
-
 router.get('/logout', authController.logout);
+router.post('/forgotPassword', authController.forgotPassword);
+router.patch('/resetPassword/:token', authController.resetPassword);
 
 router.use(authController.protect);
-
+router.patch(
+  '/updateMyPassword',
+  authController.hasPermission(USER_PERMISSIONS.UPDATE_OWN, 'User'),
+  authController.updatePassword
+);
+router.get(
+  '/me',
+  authController.hasPermission(USER_PERMISSIONS.READ_OWN, 'User'),
+  userController.getMe,
+  userController.getUser
+);
+router.patch(
+  '/updateMe',
+  authController.hasPermission(USER_PERMISSIONS.UPDATE_OWN, 'User'),
+  userController.uploadUserPhoto,
+  userController.resizeUserPhoto,
+  userController.updateMe
+);
+router.delete(
+  '/banUser',
+  authController.hasPermission(USER_PERMISSIONS.DELETE_ANY, 'User'),
+  userController.banUser
+);
+router.post(
+  '/unBanUser',
+  authController.hasPermission(USER_PERMISSIONS.READ_ANY, 'User'),
+  userController.unBanUser
+);
+router
+  .route('/')
+  .get(
+    authController.hasPermission(USER_PERMISSIONS.READ_ANY, 'User'),
+    userController.getAllUsers
+  );
 router
   .route('/:id')
   .get(
@@ -22,13 +56,6 @@ router
   .patch(
     authController.hasPermission(USER_PERMISSIONS.UPDATE_ANY, 'User'),
     userController.updateUser
-  );
-
-router
-  .route('/:id')
-  .delete(
-    authController.hasPermission(USER_PERMISSIONS.DELETE_ANY, 'User'),
-    userController.banUser
   );
 
 module.exports = router;
